src/objects/Certification_and_CEU__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Certifications and CEU's</relationshipLabel>
        <relationshipName>Certifications_and_CEU_s</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FLOW_Concatenated_Fields__c</fullName>
        <description>This field is to display the information correctly in the lightning page on the portal for Certifications and CEU's</description>
        <formula>Name &amp; " | " &amp; TEXT(FON_Contact_Hours__c) &amp; " | " &amp;  TEXT(FON_Number_of_Credits__c)  &amp; " | " &amp; TEXT(FON_Awarded_Date__c) &amp; " | " &amp;  TEXT(Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FLOW Concatenated Fields</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FON_Awarded_Date__c</fullName>
        <label>Awarded Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FON_Contact_Hours__c</fullName>
        <label>Contact Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FON_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item</label>
        <referenceTo>OrderApi__Item__c</referenceTo>
        <relationshipLabel>Certifications and CEU's</relationshipLabel>
        <relationshipName>Certifications_and_CEU_s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FON_Number_of_Credits__c</fullName>
        <label>Number of Credits</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nimble_ID__c</fullName>
        <externalId>true</externalId>
        <label>Nimble ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Certification and CEU</label>
    <nameField>
        <label>Certification and CEU Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Certifications and CEU's</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>